--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "gulp-clean": "^0.4.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^7.1.0",
-    "gulp-jshint": "^2.1.0",
     "gulp-livereload": "^4.0.2",
     "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
@@ -27,16 +26,20 @@
     "node-sass": "^6.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "babel-polyfill": "^6.26.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.1.0",
-    "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.0.0",
     "gulp-terser": "^2.0.1",
     "gulp-uglify-es": "^3.0.0",
     "jquery": "^3.6.0",
+    "jshint": "^2.13.1",
     "owl.carousel": "^2.3.4",
-    "postcss": "^8.3.6"
+    "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1"
   }
 }
