--- a/package.json
+++ b/package.json
@@ -10,20 +10,27 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.27.5",
+    "browserslist": "^4.16.7",
     "del": "^6.0.0",
-    "eslint": "^7.32.0",
     "gsap": "^3.7.1",
     "gulp-autoprefixer": "^8.0.0",
-    "gulp-clean": "^0.4.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^7.1.0",
+    "gulp-jshint": "^2.1.0",
     "gulp-livereload": "^4.0.2",
     "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "node-sass": "^6.0.1"
+    "jquery": "^3.6.0",
+    "jquery.stellar": "^0.6.2",
+    "normalize-scss": "^7.0.1",
+    "normalize.css": "^8.0.1",
+    "owl.carousel2": "^2.2.1",
+    "rellax": "^1.12.1",
+    "svg4everybody": "^2.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -36,10 +43,7 @@
     "gulp-sass": "^5.0.0",
     "gulp-terser": "^2.0.1",
     "gulp-uglify-es": "^3.0.0",
-    "jquery": "^3.6.0",
-    "jshint": "^2.13.1",
-    "owl.carousel": "^2.3.4",
-    "postcss": "^8.3.6",
-    "postcss-loader": "^6.1.1"
+    "jshint": "^2.13.0",
+    "node-sass": "^6.0.1"
   }
 }
